feat: decouple web from backend contract
